package com.moedaestudantil.domain.model;

public enum TransacaoTipo {
  /** Professor envia moedas a um aluno (US03). */
  ENVIO,
  /** Aluno resgata vantagem (US06). */
  RESGATE
}
